--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
+/* CSS Reset */
+
+* {
+  font-size: 100%;
+  font: inherit;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  text-decoration: none;
+  /* border: 1px solid grey; */
+}
+
+a {
+  color: black;
+  border: 1px solid gainsboro;
+  border-radius: 3px;
+}
+
+/* General Styling & Layout */
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: sans-serif;
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.25rem;
+}
+
+.button {
+  border: 1px solid gainsboro;
+  padding: 1% 3%;
+
+}
+
 .App {
   text-align: center;
+  color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-bar {
+  width: 85%;
+  margin: 0 auto;
+  padding: 3%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-bar nav {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-bar a {
+  background-color: white;
+  padding: 1% 4%;
+
+}
+
+.hero {
+  height: 45vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 1px solid gainsboro;
+  background-color: #f6f6f6;
 }
 
-.App-link {
-  color: #61dafb;
+.hero .button {
+  margin-top: 4%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.food-container {
+  width: 85%;
+  margin: 0 auto;
+  margin-top: 5%;
+}
+
+.food-gallery {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 1% 0;
+}
+
+.food-tile {
+  width: 23%;
+  margin-top: 2%;
 }
