--- a/src/App.css
+++ b/src/App.css
@@ -127,11 +127,100 @@ h3 {
   margin-top: 2%;
 }
 
-.form-bar {
-  background-color: #F6F6F6;
-}
-
 .form-group {
   display: flex;
   flex-direction: column;
+  padding: 3% 0;
+}
+
+.form-group label {
+  margin-left: 5%;
+}
+
+.form-bar {
+  background-color: #F6F6F6;
+  padding: 3%;
+  margin-bottom: 2%;
+}
+
+.form-bottom {
+  border-top: 1px solid gainsboro;
+  padding: 2%;
+}
+
+.form-bottom .container {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form-bottom label {
+  width: 10%;
+}
+
+.form-bottom button {
+  width: 85%;
+  padding: 1%;
+}
+
+#special-instructions input {
+  width: 95%;
+  padding: 2% 1%;
+}
+
+
+/* Classes for toggle switch from W3Schools */
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
