--- a/src/App.css
+++ b/src/App.css
@@ -187,8 +187,8 @@ h3 {
 /* Hide default HTML checkbox */
 .switch input {
   opacity: 0;
-  width: 0;
-  height: 0;
+  width: 1px;
+  height: 1px;
 }
 
 /* The slider */
